--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://cont_mysql:3306/UserDB
+spring.datasource.url = jdbc:mysql://mysql_cont:3306/UserDB
 
 # Username and password
 spring.datasource.username = admin
